--- a/index.html
+++ b/index.html
@@ -190,7 +190,7 @@
     color: #ffc8c8;
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
 }
-  }
+  
   
   </style>
 </head>
@@ -336,7 +336,7 @@
   
 
   <!-- News Cards Section -->
-  <section class="news-cards my-5">
+  <section  class="news-cards my-5">
     <div class="hero-cards-container">
       <div class="row g-4 justify-content-center">
         <!-- Card 1 -->
@@ -373,6 +373,13 @@
         </div>
       </div>
     </div>
+  </section>
+
+
+  <section id="tickets-section">
+    <h1 class="text-center ticket-header">BARCA TICKETS</h1>
+
+    
   </section>
   
 
